add-targetBlank-serebii-links

--- a/pages/starter-hisui.html
+++ b/pages/starter-hisui.html
@@ -97,7 +97,7 @@
         <div class="d-flex align-items-center justify-content-center">
             <div class="d-flex flex-wrap card-container">
 
-                <a class="link-card" href="https://www.serebii.net/pokedex-sm/501.shtml">
+                <a class="link-card" href="https://www.serebii.net/pokedex-sm/501.shtml" target="_blank">
                     <div class=" card">
 
                         <div class="card-img">
@@ -120,7 +120,7 @@
                 </a>
 
 
-                <a class="link-card" href="https://www.serebii.net/pokedex-sm/155.shtml">
+                <a class="link-card" href="https://www.serebii.net/pokedex-sm/155.shtml" target="_blank">
                     <div class="card">
 
                         <div class="card-img">
@@ -144,7 +144,7 @@
                     </div>
                 </a>
 
-                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/rowlet">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/rowlet" target="_blank">
                     <div class="card">
 
                         <div class="card-img">
