--- a/pages/starter-hoenn.html
+++ b/pages/starter-hoenn.html
@@ -97,7 +97,7 @@
         <div class="d-flex align-items-center justify-content-center">
             <div class="d-flex flex-wrap card-container">
 
-                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/torchic">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/torchic" target="_blank">
                     <div class="card">
 
                         <div class="card-img">
@@ -119,7 +119,7 @@
 
                     </div>
                 </a>
-                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/treecko">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/treecko" target="_blank">
                     <div class="card">
 
                         <div class="card-img">
@@ -140,7 +140,7 @@
                     </div>
                 </a>
 
-                <a class="link-card" href="https://www.serebii.net/pokedex-xy/258.shtml">
+                <a class="link-card" href="https://www.serebii.net/pokedex-xy/258.shtml" target="_blank">
                     <div class="card">
 
                         <div class="card-img">
