--- a/pages/starter-kanto.html
+++ b/pages/starter-kanto.html
@@ -96,7 +96,7 @@
         </div>
         <div class="d-flex align-items-center justify-content-center">
             <div class="d-flex flex-wrap card-container">
-                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/bulbasaur/">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/bulbasaur/" target="_blank">
                     <div class="card">
 
                         <div class="card-img">
@@ -118,7 +118,7 @@
 
                     </div>
                 </a>
-                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/squirtle/">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/squirtle/" target="_blank">
                     <div class="card">
 
                         <div class="card-img">
@@ -142,7 +142,7 @@
 
                     </div>
                 </a>
-                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/charmander/">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/charmander/" target="_blank">
                     <div class="card">
 
                         <div class="card-img">
@@ -165,7 +165,7 @@
                     </div>
                 </a>
 
-                <a class="link-card" href="https://www.serebii.net/pokedex-sm/025.shtml">
+                <a class="link-card" href="https://www.serebii.net/pokedex-sm/025.shtml" target="_blank">
                     <div class="card">
 
                         <div class="card-img">
@@ -188,7 +188,7 @@
                     </div>
                 </a>
 
-                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/eevee/">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/eevee/" target="_blank">
                     <div class="card">
 
                         <div class="card-img">
