--- a/pages/starter-sinnoh.html
+++ b/pages/starter-sinnoh.html
@@ -97,7 +97,7 @@
         <div class="d-flex align-items-center justify-content-center">
             <div class="d-flex flex-wrap card-container">
 
-                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/chimchar">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/chimchar" target="_blank">
                     <div class="card">
 
                         <div class="card-img">
@@ -121,7 +121,7 @@
                 </a>
 
 
-                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/turtwig">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/turtwig" target="_blank">
                     <div class="card">
 
                         <div class="card-img">
@@ -143,7 +143,7 @@
                     </div>
                 </a>
 
-                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/piplup">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/piplup" target="_blank">
                     <div class="card">
 
                         <div class="card-img">
