--- a/pages/starter-alola.html
+++ b/pages/starter-alola.html
@@ -97,7 +97,7 @@
         <div class="d-flex align-items-center justify-content-center">
             <div class="d-flex flex-wrap card-container">
 
-                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/rowlet">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/rowlet" target="_blank">
                     <div class="card">
 
                         <div class="card-img">
@@ -120,7 +120,7 @@
                 </a>
 
 
-                <a class="link-card" href="https://www.serebii.net/pokedex-sm/728.shtml">
+                <a class="link-card" href="https://www.serebii.net/pokedex-sm/728.shtml" target="_blank">
                     <div class="card">
 
                         <div class="card-img">
@@ -141,7 +141,7 @@
                     </div>
                 </a>
 
-                <a class="link-card" href="https://www.serebii.net/pokedex-sm/725.shtml">
+                <a class="link-card" href="https://www.serebii.net/pokedex-sm/725.shtml" target="_blank">
                     <div class=" card">
 
                         <div class="card-img">
