--- a/pages/starter-galar.html
+++ b/pages/starter-galar.html
@@ -97,7 +97,7 @@
         <div class="d-flex align-items-center justify-content-center">
             <div class="d-flex flex-wrap card-container">
 
-                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/scorbunny">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/scorbunny" target="_blank">
                     <div class="card">
 
                         <div class="card-img">
@@ -120,7 +120,7 @@
                 </a>
 
 
-                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/sobble">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/sobble" target="_blank">
                     <div class="card">
 
                         <div class="card-img">
@@ -141,7 +141,7 @@
                     </div>
                 </a>
 
-                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/grookey">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/grookey" target="_blank">
                     <div class=" card">
 
                         <div class="card-img">
