--- a/pages/starter-johto.html
+++ b/pages/starter-johto.html
@@ -97,7 +97,7 @@
         <div class="d-flex align-items-center justify-content-center">
             <div class="d-flex flex-wrap card-container">
 
-                <a class="link-card" href="https://www.serebii.net/pokedex-sm/155.shtml">
+                <a class="link-card" href="https://www.serebii.net/pokedex-sm/155.shtml" target="_blank">
                     <div class="card">
 
                         <div class="card-img">
@@ -122,7 +122,7 @@
                 </a>
 
 
-                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/totodile/">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/totodile/" target="_blank">
                     <div class="card">
 
                         <div class="card-img">
@@ -143,7 +143,7 @@
                     </div>
                 </a>
 
-                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/chikorita/">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/chikorita/" target="_blank">
                     <div class="card">
 
                         <div class="card-img">
